{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 975,
  "lineage": "191539f6-14af-a052-059d-6e98a300e773",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:475388737367:instance/i-044d26d54801a6e6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044d26d54801a6e6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cdc-blockchain-development",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0730763ca28ccd738",
            "private_dns": "ip-10-0-0-57.ec2.internal",
            "private_ip": "10.0.0.57",
            "public_ip": "3.231.207.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:475388737367:key/5064e0a4-9c7a-4fe7-b6a6-27ed0a45d5d9",
                "throughput": 0,
                "volume_id": "vol-04fb54b8ab40f47b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066b58537596f288d",
            "tags": {
              "Name": "bastion",
              "env": "development"
            },
            "tags_all": {
              "Name": "bastion",
              "env": "development"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084b2fe24724f6b2b"
            ]
          },
          "dependencies": [
            "module.bastion.data.aws_ami.app",
            "module.network.aws_security_group.bastion",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.ssh_key.aws_key_pair.default",
            "module.ssh_key.tls_private_key.default"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:security-group/sg-0a632f72339b37646",
            "description": "Security group for bastion",
            "egress": [],
            "id": "sg-0a632f72339b37646",
            "ingress": [],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "475388737367",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "development"
            },
            "tags_all": {
              "env": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6182c97fd8bedb7",
            "domain": "vpc",
            "id": "eipalloc-0c6182c97fd8bedb7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-242-243-110.compute-1.amazonaws.com",
            "public_ip": "54.242.243.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:internet-gateway/igw-0c8f5818309990a72",
            "id": "igw-0c8f5818309990a72",
            "owner_id": "475388737367",
            "tags": {
              "Name": "InternetGateway",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "InternetGateway",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6182c97fd8bedb7",
            "connectivity_type": "public",
            "id": "nat-0ce28058f97c084e3",
            "network_interface_id": "eni-0d19c0a405930bcfe",
            "private_ip": "10.0.0.20",
            "public_ip": "54.242.243.110",
            "subnet_id": "subnet-066b58537596f288d",
            "tags": {
              "Name": "NatGateway",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "NatGateway",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf65b57adb93b0d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ce28058f97c084e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf65b57adb93b0d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c8f5818309990a72",
            "id": "r-rtb-0dd91899c60a4f4ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd91899c60a4f4ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:route-table/rtb-0bf65b57adb93b0d4",
            "id": "rtb-0bf65b57adb93b0d4",
            "owner_id": "475388737367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rtb",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "private-rtb",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:route-table/rtb-0dd91899c60a4f4ee",
            "id": "rtb-0dd91899c60a4f4ee",
            "owner_id": "475388737367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-rtb",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "public-rtb",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff49cec589e9b9b",
            "route_table_id": "rtb-0bf65b57adb93b0d4",
            "subnet_id": "subnet-09e3a03f5fc4aaf56"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca93ca3456e81e6b",
            "route_table_id": "rtb-0bf65b57adb93b0d4",
            "subnet_id": "subnet-0473512f2e15b8ae7"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c94dc89f29c78c75",
            "route_table_id": "rtb-0bf65b57adb93b0d4",
            "subnet_id": "subnet-0a4bab2035eaba8cc"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc7beea9b9d348ea",
            "route_table_id": "rtb-0dd91899c60a4f4ee",
            "subnet_id": "subnet-066b58537596f288d"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c3159ce15db1a8a",
            "route_table_id": "rtb-0dd91899c60a4f4ee",
            "subnet_id": "subnet-0cb8ec983aa850056"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0fed6e4e4a1665e",
            "route_table_id": "rtb-0dd91899c60a4f4ee",
            "subnet_id": "subnet-085b95c5c443d54f0"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:security-group/sg-01bdb8dd2c91fdff8",
            "description": "Security Group for web applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic for app",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bdb8dd2c91fdff8",
            "ingress": [],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "475388737367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "app-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:security-group/sg-0da6202dbcb9a2da1",
            "description": "Security Group for application load balancers",
            "egress": [],
            "id": "sg-0da6202dbcb9a2da1",
            "ingress": [],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "475388737367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "alb-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:security-group/sg-084b2fe24724f6b2b",
            "description": "Security Group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic for ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084b2fe24724f6b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "475388737367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "app-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:security-group/sg-04d0f4b9c64da5f6d",
            "description": "Security group for Postgres running on RDS",
            "egress": [],
            "id": "sg-04d0f4b9c64da5f6d",
            "ingress": [],
            "name": "postgres-sg",
            "name_prefix": "",
            "owner_id": "475388737367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "db-sg",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb-egr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-579126185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da6202dbcb9a2da1",
            "self": false,
            "source_security_group_id": "sg-01bdb8dd2c91fdff8",
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.app-alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb-ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3585462486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da6202dbcb9a2da1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app-alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb-to-app-ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1556915921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01bdb8dd2c91fdff8",
            "self": false,
            "source_security_group_id": "sg-0da6202dbcb9a2da1",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.app-alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-to-db-ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1158125115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04d0f4b9c64da5f6d",
            "self": false,
            "source_security_group_id": "sg-01bdb8dd2c91fdff8",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.db",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-to-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-873819084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01bdb8dd2c91fdff8",
            "self": false,
            "source_security_group_id": "sg-084b2fe24724f6b2b",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.bastion",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-egr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-4288996301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04d0f4b9c64da5f6d",
            "self": false,
            "source_security_group_id": "sg-01bdb8dd2c91fdff8",
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.db",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-to-app-ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3944590134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01bdb8dd2c91fdff8",
            "self": false,
            "source_security_group_id": "sg-04d0f4b9c64da5f6d",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.app",
            "module.network.aws_security_group.db",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-0019366c8ab7091d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0019366c8ab7091d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "tags_all": {
              "Name": "internal-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-00482796e2cc990ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00482796e2cc990ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "tags_all": {
              "Name": "internal-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-0b8f4421613eaeea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8f4421613eaeea6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "tags_all": {
              "Name": "internal-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "internal"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-09e3a03f5fc4aaf56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e3a03f5fc4aaf56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-0473512f2e15b8ae7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0473512f2e15b8ae7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-0a4bab2035eaba8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4bab2035eaba8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "private"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-066b58537596f288d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b58537596f288d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-0cb8ec983aa850056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb8ec983aa850056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:subnet/subnet-085b95c5c443d54f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b95c5c443d54f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475388737367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain",
              "type": "public"
            },
            "vpc_id": "vpc-0137c422b74568ccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475388737367:vpc/vpc-0137c422b74568ccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07430a39526d09809",
            "default_route_table_id": "rtb-02441857cbf1310cc",
            "default_security_group_id": "sg-0a1e6e0170ede1bec",
            "dhcp_options_id": "dopt-eceaac8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0137c422b74568ccd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02441857cbf1310cc",
            "owner_id": "475388737367",
            "tags": {
              "Name": "cdc-blockchain-development",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            },
            "tags_all": {
              "Name": "cdc-blockchain-development",
              "environment": "development",
              "org": "cdc",
              "project": "blockchain"
            }
          }
        }
      ]
    }
  ]
}